Fix alignment of ai icon

--- a/mitosheet/css/toolbar.css
+++ b/mitosheet/css/toolbar.css
@@ -214,6 +214,12 @@ p.mito-toolbar-button-label {
   height: auto;
 }
 
+.mito-toolbar-button span {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 
 /* Tab Bar Style */
 .mito-toolbar-tabbar-tabname {
